--- a/src/ui/toolbar/styles.scss
+++ b/src/ui/toolbar/styles.scss
@@ -13,13 +13,16 @@
 }
 
 .exsied-toolbar {
+	&.exsied-toolbar-main {
+		position: sticky;
+		top: 0;
+	}
+
 	.exsied-normal {
 		background-color: var(--exd-toolbar-backgroud-color);
 		color: var(--exd-toolbar-color);
 		border-bottom: 1px solid var(--exd-toolbar-border-bottom-color);
 		padding: 0.1rem;
-		position: sticky;
-		top: 0;
 	}
 
 	> * {
