fix packaging configure

--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,6 +1,6 @@
 @mixin bkgSvgIcon() {
 	content: ' ';
-	background-image: url(./close.svg); // replace this url
+	// background-image: url(./close.svg); // replace this url
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: contain;
