fix selector error

--- a/src/ui/toolbar/styles.scss
+++ b/src/ui/toolbar/styles.scss
@@ -62,7 +62,7 @@
 	}
 }
 
-.exsied-toolbar-bubble-wrap {
+#exsied-toolbar-bubble-wrap {
 	position: absolute;
 	box-sizing: border-box;
 	transform: translateY(10px);
