--- a/src/ui/dropdown/styles.scss
+++ b/src/ui/dropdown/styles.scss
@@ -1,14 +1,12 @@
 @import '../../styles/mixin.scss';
 
-:root {
-	--dropdown-list-z-index: 10;
-}
-
 .exsied-dropdown {
 	display: inline-block;
 	position: relative;
 
 	.exsied-dropdown-trigger {
+		color: var(--exd-text-color);
+
 		&::after {
 			@include bkgSvgIcon;
 			background-image: url(./icons/arrow-down.svg);
@@ -19,16 +17,15 @@
 
 	.exsied-dropdown-list {
 		display: none;
-		z-index: var(--dropdown-list-z-index);
+		position: absolute;
+		left: 0;
+		white-space: nowrap;
+		background-color: var(--exd-component-backgroud-color);
+		color: var(--exd-component-color);
+		border: 1px solid var(--exd-component-border-color);
 
 		&.exsied-dropdown-list-show {
 			display: unset;
-			position: absolute;
-			left: 0;
-			white-space: nowrap;
-			background-color: var(--exd-component-backgroud-color);
-			color: var(--exd-component-color);
-			border: 1px solid var(--exd-component-border-color);
 		}
 
 		.exsied-dropdown-list-item {
