--- a/src/ui/toolbar/styles.scss
+++ b/src/ui/toolbar/styles.scss
@@ -1,6 +1,6 @@
 :root {
 	--exd-toolbar-backgroud-color: #fefefe;
-	--exd-toolbar-color: rgb(44, 44, 44);
+	--exd-toolbar-text-color: rgb(44, 44, 44);
 	--exd-toolbar-border-bottom-color: #ccc;
 
 	--exd-toolbar-ctrl-backgroud-color: unset;
@@ -20,7 +20,7 @@
 
 	.exsied-normal {
 		background-color: var(--exd-toolbar-backgroud-color);
-		color: var(--exd-toolbar-color);
+		color: var(--exd-toolbar-text-color);
 		border-bottom: 1px solid var(--exd-toolbar-border-bottom-color);
 		padding: 0.1rem;
 	}
