--- a/src/ui/toolbar/styles.scss
+++ b/src/ui/toolbar/styles.scss
@@ -65,7 +65,7 @@
 
 #exsied-toolbar-bubble-wrap {
 	position: absolute;
-	display: 'none';
+	display: none;
 	box-sizing: border-box;
 	transform: translateY(10px);
 	background-color: var(--exd-toolbar-bubble-backgroud-color);
