--- a/src/plugins/about/styles.scss
+++ b/src/plugins/about/styles.scss
@@ -3,7 +3,7 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-about {
 		@include bkgSvgIcon;
-		background-image: url(./icons/question.svg);
+		background-image: url(../../icons/question.svg);
 	}
 }
 
