--- a/src/plugins/headings/styles.scss
+++ b/src/plugins/headings/styles.scss
@@ -3,36 +3,36 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-paragraph {
 		@include bkgSvgIcon;
-		background-image: url(./icons/paragraph.svg);
+		background-image: url(../../icons/paragraph.svg);
 	}
 
 	i.exsied-btn-h1 {
 		@include bkgSvgIcon;
-		background-image: url(./icons/h1.svg);
+		background-image: url(../../icons/h1.svg);
 	}
 
 	i.exsied-btn-h2 {
 		@include bkgSvgIcon;
-		background-image: url(./icons/h2.svg);
+		background-image: url(../../icons/h2.svg);
 	}
 
 	i.exsied-btn-h3 {
 		@include bkgSvgIcon;
-		background-image: url(./icons/h3.svg);
+		background-image: url(../../icons/h3.svg);
 	}
 
 	i.exsied-btn-h4 {
 		@include bkgSvgIcon;
-		background-image: url(./icons/h4.svg);
+		background-image: url(../../icons/h4.svg);
 	}
 
 	i.exsied-btn-h5 {
 		@include bkgSvgIcon;
-		background-image: url(./icons/h5.svg);
+		background-image: url(../../icons/h5.svg);
 	}
 
 	i.exsied-btn-h6 {
 		@include bkgSvgIcon;
-		background-image: url(./icons/h6.svg);
+		background-image: url(../../icons/h6.svg);
 	}
 }
