--- a/src/plugins/indent_and_outdent/styles.scss
+++ b/src/plugins/indent_and_outdent/styles.scss
@@ -3,11 +3,11 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-indent {
 		@include bkgSvgIcon;
-		background-image: url(./icons/indent.svg);
+		background-image: url(../../icons/indent.svg);
 	}
 
 	i.exsied-btn-outdent {
 		@include bkgSvgIcon;
-		background-image: url(./icons/outdent.svg);
+		background-image: url(../../icons/outdent.svg);
 	}
 }
