--- a/src/plugins/insert_menu/styles.scss
+++ b/src/plugins/insert_menu/styles.scss
@@ -3,7 +3,7 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-plus {
 		@include bkgSvgIcon;
-		background-image: url(./icons/plus.svg);
+		background-image: url(../../icons/plus.svg);
 	}
 }
 
