--- a/src/plugins/italic/styles.scss
+++ b/src/plugins/italic/styles.scss
@@ -3,6 +3,6 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-italic {
 		@include bkgSvgIcon;
-		background-image: url(./icons/italic.svg);
+		background-image: url(../../icons/italic.svg);
 	}
 }
