--- a/src/plugins/source_code/styles.scss
+++ b/src/plugins/source_code/styles.scss
@@ -3,11 +3,11 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-braces {
 		@include bkgSvgIcon;
-		background-image: url(./icons/braces.svg);
+		background-image: url(../../icons/braces.svg);
 	}
 
 	i.exsied-btn-xml {
 		@include bkgSvgIcon;
-		background-image: url(./icons/xml.svg);
+		background-image: url(../../icons/xml.svg);
 	}
 }
