--- a/src/plugins/strikethrough/styles.scss
+++ b/src/plugins/strikethrough/styles.scss
@@ -3,6 +3,6 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-strikethrough {
 		@include bkgSvgIcon;
-		background-image: url(./icons/strik.svg);
+		background-image: url(../../icons/strik.svg);
 	}
 }
