--- a/src/plugins/underline/styles.scss
+++ b/src/plugins/underline/styles.scss
@@ -3,6 +3,6 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-underline {
 		@include bkgSvgIcon;
-		background-image: url(./icons/underline.svg);
+		background-image: url(../../icons/underline.svg);
 	}
 }
