--- a/src/plugins/bold/styles.scss
+++ b/src/plugins/bold/styles.scss
@@ -3,6 +3,6 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-blod {
 		@include bkgSvgIcon;
-		background-image: url(./icons/bold.svg);
+		background-image: url(../../icons/bold.svg);
 	}
 }
