--- a/src/plugins/horizontal_rule/styles.scss
+++ b/src/plugins/horizontal_rule/styles.scss
@@ -3,6 +3,6 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-hr {
 		@include bkgSvgIcon;
-		background-image: url(./icons/hr.svg);
+		background-image: url(../../icons/hr.svg);
 	}
 }
