--- a/src/plugins/quote/styles.scss
+++ b/src/plugins/quote/styles.scss
@@ -3,6 +3,6 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-quote {
 		@include bkgSvgIcon;
-		background-image: url(./icons/quote.svg);
+		background-image: url(../../icons/quote.svg);
 	}
 }
