--- a/src/plugins/subscript_and_superscript/styles.scss
+++ b/src/plugins/subscript_and_superscript/styles.scss
@@ -3,11 +3,11 @@
 .exsied .exsied-toolbar {
 	i.exsied-btn-sup {
 		@include bkgSvgIcon;
-		background-image: url(./icons/superscript.svg);
+		background-image: url(../../icons/superscript.svg);
 	}
 
 	i.exsied-btn-sub {
 		@include bkgSvgIcon;
-		background-image: url(./icons/subscript.svg);
+		background-image: url(../../icons/subscript.svg);
 	}
 }
