--- a/src/ui/color-picker/styles.scss
+++ b/src/ui/color-picker/styles.scss
@@ -14,7 +14,7 @@
 
 		&.transparent {
 			@include bkgSvgIcon;
-			background-image: url(./icons/transparent.svg);
+			background-image: url(../../icons/transparent.svg);
 
 			width: 20px;
 			height: 20px;
