--- a/src/plugins/colors/styles.scss
+++ b/src/plugins/colors/styles.scss
@@ -8,6 +8,6 @@
 
 	i.exsied-btn-text-color {
 		@include bkgSvgIcon;
-		background-image: url(../../icons/font-color.svg);
+		background-image: url(../../icons/text-color.svg);
 	}
 }
