--- a/src/plugins/table/styles.scss
+++ b/src/plugins/table/styles.scss
@@ -43,7 +43,7 @@
 
 	&::after {
 		@include bkgSvgIcon;
-		background-image: url(../../icons/arrow-down.svg);
+		background-image: url(../../icons/chevron-down.svg);
 
 		background-size: cover;
 	}
