--- a/src/plugins/source_code/styles.scss
+++ b/src/plugins/source_code/styles.scss
@@ -10,4 +10,9 @@
 		@include bkgSvgIcon;
 		background-image: url(../../icons/xml.svg);
 	}
+
+	i.exsied-btn-back {
+		@include bkgSvgIcon;
+		background-image: url(../../icons/arrow-left-circle.svg);
+	}
 }
