--- a/src/plugins/table/styles.scss
+++ b/src/plugins/table/styles.scss
@@ -64,7 +64,7 @@
 			cursor: pointer;
 
 			&:hover {
-				background-color: #eee;
+				background-color: var(--exd-highlight-color);
 			}
 
 			i {
