--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,19 @@
 	--exd-highlight-color: rgb(104, 211, 175);
 }
 
+.dark {
+	--exd-backgroud-color: #32393f;
+	--exd-text-color: #d1d4d9;
+	--exd-component-backgroud-color: #212528;
+	--exd-component-color: #d1d4d9;
+	--exd-component-border-color: #1f2930;
+	--exd-highlight-color: rgb(59, 138, 112);
+
+	.exsied-icon {
+		filter: invert(0.9);
+	}
+}
+
 .exsied {
 	background-color: var(--exd-backgroud-color);
 	color: var(--exd-text-color);
