--- a/src/ui/popup_view/styles.scss
+++ b/src/ui/popup_view/styles.scss
@@ -1,10 +1,19 @@
 @import '../../styles/mixin.scss';
 
-:root {
+.exsied-popup-view {
 	--popup-z-index: 10;
 	--popup-box-shadow-color: #0000004d;
 	--popup-input-backgroud-color: #fff;
 	--popup-input-color: #050505;
+}
+
+.dark {
+	.exsied-popup-view {
+		--popup-z-index: 10;
+		--popup-box-shadow-color: #a3a3a34d;
+		--popup-input-backgroud-color: #000000;
+		--popup-input-color: #aaaaaa;
+	}
 }
 
 .exsied-popup-view {
@@ -40,6 +49,7 @@
 
 		input {
 			background-color: var(--popup-input-backgroud-color);
+			color: var(--popup-input-color);
 			border: 1px solid var(--exd-component-border-color);
 			display: block;
 			width: 100%;
