--- a/src/ui/popup_view/styles.scss
+++ b/src/ui/popup_view/styles.scss
@@ -21,6 +21,7 @@
 	box-shadow: 0 5px 10px var(--popup-box-shadow-color);
 	background-color: var(--exd-component-backgroud-color);
 	color: var(--exd-component-color);
+	border: 1px solid var(--exd-border-color);
 	border-radius: 0.5rem;
 	padding: 0.5rem 0.75rem;
 	overflow: scroll;
