--- a/src/ui/toolbar/styles.scss
+++ b/src/ui/toolbar/styles.scss
@@ -59,6 +59,7 @@
 		margin: var(--exd-toolbar-ctrl-margin);
 		height: var(--exd-toolbar-ctrl-height);
 		min-width: 30px;
+		white-space: nowrap;
 	}
 
 	.exsied-ctrl {
