--- a/src/plugins/bold/styles.scss
+++ b/src/plugins/bold/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/mixin.scss';
 
 .exsied .exsied-toolbar {
-	i.exsied-btn-blod {
+	i.exsied-icon-blod {
 		@include bkgSvgIcon;
 		background-image: url(../../icons/bold.svg);
 	}
