--- a/src/plugins/image/styles.scss
+++ b/src/plugins/image/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/mixin.scss';
 
 .exsied .exsied-toolbar {
-	i.exsied-btn-image {
+	i.exsied-icon-image {
 		@include bkgSvgIcon;
 		background-image: url(../../icons/image.svg);
 	}
