--- a/src/plugins/indent_and_outdent/styles.scss
+++ b/src/plugins/indent_and_outdent/styles.scss
@@ -1,12 +1,12 @@
 @import '../../styles/mixin.scss';
 
 .exsied .exsied-toolbar {
-	i.exsied-btn-indent {
+	i.exsied-icon-indent {
 		@include bkgSvgIcon;
 		background-image: url(../../icons/indent.svg);
 	}
 
-	i.exsied-btn-outdent {
+	i.exsied-icon-outdent {
 		@include bkgSvgIcon;
 		background-image: url(../../icons/outdent.svg);
 	}
