--- a/src/plugins/insert_menu/styles.scss
+++ b/src/plugins/insert_menu/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/mixin.scss';
 
 .exsied .exsied-toolbar {
-	i.exsied-btn-plus {
+	i.exsied-icon-plus {
 		@include bkgSvgIcon;
 		background-image: url(../../icons/plus.svg);
 	}
