--- a/src/plugins/link/styles.scss
+++ b/src/plugins/link/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/mixin.scss';
 
 .exsied .exsied-toolbar {
-	i.exsied-btn-link {
+	i.exsied-icon-link {
 		@include bkgSvgIcon;
 		background-image: url(../../icons/link.svg);
 	}
@@ -37,22 +37,22 @@
 			align-items: center;
 			padding: 0 0.25rem;
 
-			i.exsied-btn-edit {
+			i.exsied-icon-edit {
 				@include bkgSvgIcon;
 				background-image: url(../../icons/edit.svg);
 			}
 
-			i.exsied-btn-trash {
+			i.exsied-icon-trash {
 				@include bkgSvgIcon;
 				background-image: url(../../icons/trash.svg);
 			}
 
-			i.exsied-btn-cancel {
+			i.exsied-icon-cancel {
 				@include bkgSvgIcon;
 				background-image: url(../../icons/close.svg);
 			}
 
-			i.exsied-btn-confirm {
+			i.exsied-icon-confirm {
 				@include bkgSvgIcon;
 				background-image: url(../../icons/confirm.svg);
 			}
