--- a/src/plugins/quote/styles.scss
+++ b/src/plugins/quote/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/mixin.scss';
 
 .exsied .exsied-toolbar {
-	i.exsied-btn-quote {
+	i.exsied-icon-quote {
 		@include bkgSvgIcon;
 		background-image: url(../../icons/quote.svg);
 	}
