--- a/src/plugins/find_and_replace/styles.scss
+++ b/src/plugins/find_and_replace/styles.scss
@@ -16,6 +16,7 @@
 	display: block;
 
 	.exsied-find-actions {
+		padding-block-start: 0.5rem;
 		display: flex;
 	}
 
@@ -31,8 +32,8 @@
 		padding: 0.5rem;
 
 		&.exsied-btn-regex {
-			&.active {
-				color: var(--exd-highlight-color);
+			&.exsied-active {
+				background-color: var(--exd-highlight-color);
 			}
 		}
 
